--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
 	text-align:center;
 	font-family: 'Do Hyeon', sans-serif;
 	font-weight:normal;
-	font-size:25px;
+	font-size:1.5vw;
 	text-transform:uppercase;
 	color:black;
 	text-align:center;
@@ -66,7 +66,7 @@ h2 {
 
 #socialmedia {
 	background-color:#e2e2e2;
-	height:2em;
+	height:2vw;
 	width:90%;
 	margin-left:5%;
 	margin-bottom:10%;
@@ -76,23 +76,21 @@ h2 {
 .p1 {
 	font-family: 'Do Hyeon', sans-serif;
 	font-weight:bold;
-	font-size:15px;
+	font-size:1vw;
 	color:black;
-	padding-top:4%;
+	padding-top:3.5%;
 	padding-left:15%;
 	text-align: justify;
-	margin-right:5%;
 }
 
 .p2 {
 	font-family: 'Do Hyeon', sans-serif;
 	font-weight:bold;
-	font-size:12px;
+	font-size:0.8vw;
 	color:black;
 	padding-top:4%;
 	padding-left:15%;
 	text-align: justify;
-	margin-right:5%;
 }
 
 #socialmedia img {
