--- a/style.css
+++ b/style.css
@@ -2,38 +2,41 @@
 	margin-left:30%;
 	width: 40%; 
 	height: 46em; 
-	background-color: #f7f7f7;
 	position: relative;
 }
 #picture {
 	position: absolute;
 	width: 40%; 
-	height: 15em;
+	height: 15.7vw;
 	background-color: black;
 	border-color:black;
 	border-width:5px;
+	display: flex;
+    flex-direction: column;
+    justify-content: center; 
 }
 
 #picture img {
 	width: 100%;
+	max-width: 100%;
 }
 
 #contacts {
-	margin-top:15em;
+	margin-top:15vw;
 	position: absolute;
 	background-color:lightblue;
 	width: 40%; 
-	height:31em;
+	height:20vw;
 }
 
 #about p {
 	text-align: justify;
 	margin-left:5%;
 	margin-right:5%;
+	font-size:1vw;
 }
 
 #about {
-	position: absolute;
 	margin-left:40%;
 	width: 60%; 
 	background-color:white;	
@@ -56,7 +59,7 @@ h2 {
 	text-align:center;
 	font-family: 'Do Hyeon', sans-serif;
 	font-weight:normal;
-	font-size:12.5px;
+	font-size:1vw;
 	text-transform:uppercase;
 	color:black;
 	text-align:center;
