--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 	margin-left:5%;
 	margin-right:5%;
 	font-size:1vw;
+	-webkit-text-size-adjust: none;
 }
 
 #about {
@@ -48,6 +49,7 @@ h1 {
 	color:black;
 	text-align:center;
 	letter-spacing: -2px;
+	-webkit-text-size-adjust: none;
 	
 }
 
@@ -61,6 +63,7 @@ h2 {
 	text-align:center;
 	letter-spacing: -0.5px;
 	margin-top:-5%;
+	-webkit-text-size-adjust: none;
 }
 
 #socialmedia {
@@ -80,6 +83,7 @@ h2 {
 	padding-top:3.5%;
 	padding-left:15%;
 	text-align: justify;
+	-webkit-text-size-adjust: none;
 }
 
 .p2 {
@@ -90,6 +94,8 @@ h2 {
 	padding-top:3.5%;
 	padding-left:15%;
 	text-align: justify;
+	-webkit-text-size-adjust: none;
+
 }
 
 #socialmedia img {
