--- a/style.css
+++ b/style.css
@@ -80,10 +80,11 @@ h2 {
 	font-weight:bold;
 	font-size:1vw;
 	color:black;
-	padding-top:3.5%;
-	padding-left:15%;
+
 	text-align: justify;
 	-webkit-text-size-adjust: none;
+	margin-top: auto;
+    margin-bottom: auto;
 }
 
 .p2 {
@@ -95,6 +96,8 @@ h2 {
 	padding-left:15%;
 	text-align: justify;
 	-webkit-text-size-adjust: none;
+    margin-top: auto;
+    margin-bottom: auto;
 
 }
 
