--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 #contacts {
 	margin-top:15.65vw;
 	position: absolute;
-	background-color:lightblue;
+	background-color:#56CBF9;
 	width: 40%; 
 	height:20vw;
 }
@@ -66,12 +66,24 @@ h2 {
 }
 
 #socialmedia {
-	background-color:#e2e2e2;
+	background-color:white;
 	height:2vw;
 	width:90%;
 	margin-left:5%;
 	margin-bottom:10%;
 	border-radius:5px;
+}
+
+#socialmedia img {
+	width: 10%;
+	margin-left:2.5%;
+	margin-top:2.5%;
+	float:left;
+}
+
+#socialmedia:hover{
+	background-color:lightblue;
+	cursor: pointer;	
 }
 
 .p1 {
@@ -99,18 +111,6 @@ h2 {
     margin-top: auto;
     margin-bottom: auto;
 
-}
-
-#socialmedia img {
-	width: 10%;
-	margin-left:2.5%;
-	margin-top:2.5%;
-	float:left;
-}
-
-#socialmedia:hover{
-	background-color:white;
-	cursor: pointer;	
 }
 
 a {
