--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 
-#top {
-	position: absolute;
-	left: 1%;
-}
-
 .side-bar{
-	position: absolute;
 	width:40%;
+	height:100%;
+	position: fixed;
+	margin-left:0.5%;
+	margin-top:-1.5%;
 }
 
 #picture {
@@ -40,12 +38,31 @@
 }
 
 #about {
-	margin-left:40%;
-	width: 99%; 
-	background-color:red;	
+	margin-left:17%;
+	background: linear-gradient(45deg,#f2f2f2,white);
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
-	overflow: hidden;
+	height:100vw;
+}
+
+#article {
+	background-color: red;
+	padding-top:2.5%;
+	margin-bottom: 2.5%;
+}
+
+#article-image {
+	float: left;
+}
+
+#article-image img {
+	margin-left:15px;
+	border-radius:5px;
+}
+
+#article-text {
+	font-weight: bold;
+	margin-left:0;
 }
 
 h1 {
@@ -83,13 +100,6 @@ h3 {
 	display: flex;
 }
 
-#socialmedia img {
-	width: 10%;
-	margin-left:2.5%;
-	margin-top:2.5%;
-	float:left;
-}
-
 #socialmedia:hover{
 	background-color:#dfeafd;
 	cursor: pointer;
@@ -122,7 +132,7 @@ h3 {
 
 a {
 	text-decoration: none;
-	color:transparent!important;
+	color:black!important;
 }
 
 
